feat: add connection string in cloud

--- a/Eshop/Eshop.csproj
+++ b/Eshop/Eshop.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <UserSecretsId>aspnet-Eshop-C4D92190-4731-4D06-88EE-9CFEEBF9F478</UserSecretsId>
+	<ErrorOnDuplicatePublishOutputFiles>false</ErrorOnDuplicatePublishOutputFiles>
   </PropertyGroup>
 
   <ItemGroup>
