feat: remove connection string in server cloud

--- a/Eshop.Data.EF/appsettings.Product.json
+++ b/Eshop.Data.EF/appsettings.Product.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:td2401.database.windows.net,1433;Initial Catalog=Eshop;Persist Security Info=True;User ID=dev;Password=Abcde\"12345;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=60;"
+    "DefaultConnection": null,
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=Eshop;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 
 }
