--- a/Eshop.WebApi/appsettings.json
+++ b/Eshop.WebApi/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "AppDbConnection": "Server=tcp:td2401.database.windows.net,1433;Initial Catalog=Eshop;Persist Security Info=True;User ID=dev;Password=Abcde\"12345;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=60;"
+    "AppDbConnection": null,
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=Eshop;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "PageSize": 12,
   "Logging": {
