--- a/Eshop/appsettings.json
+++ b/Eshop/appsettings.json
@@ -1,5 +1,6 @@
 ﻿{
   "ConnectionStrings": {
+    "DefaultConnection": null,
     "DefaultConnection": "Server=.\\SQLEXPRESS;Database=Eshop;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "PageSize": 12,
